@@ -20,11 +20,12 @@ package org.openqa.selenium.grid.node;
 import static org.openqa.selenium.internal.Debug.getDebugLogLevel;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 
-import com.google.common.collect.ImmutableSet;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.logging.Level;
@@ -53,8 +54,8 @@ public class ProxyNodeWebsockets
   private static final UrlTemplate FWD_TEMPLATE = new UrlTemplate("/session/{sessionId}/se/fwd");
   private static final UrlTemplate VNC_TEMPLATE = new UrlTemplate("/session/{sessionId}/se/vnc");
   private static final Logger LOG = Logger.getLogger(ProxyNodeWebsockets.class.getName());
-  private static final ImmutableSet<String> CDP_ENDPOINT_CAPS =
-      ImmutableSet.of("goog:chromeOptions", "ms:edgeOptions");
+  private static final Set<String> CDP_ENDPOINT_CAPS =
+      Set.of("goog:chromeOptions", "ms:edgeOptions");
   private final HttpClient.Factory clientFactory;
   private final Node node;
   private final String gridSubPath;
@@ -140,7 +141,10 @@ public class ProxyNodeWebsockets
     for (String cdpEndpointCap : CDP_ENDPOINT_CAPS) {
       Optional<URI> reportedUri = CdpEndpointFinder.getReportedUri(cdpEndpointCap, caps);
       Optional<HttpClient> client =
-          reportedUri.map(uri -> CdpEndpointFinder.getHttpClient(clientFactory, uri));
+          reportedUri.map(
+              uri ->
+                  CdpEndpointFinder.getHttpClient(
+                      clientFactory, uri, ClientConfig.defaultConfig()));
       Optional<URI> cdpUri;
 
       try {
@@ -232,18 +236,24 @@ public class ProxyNodeWebsockets
 
     LOG.info("Establishing connection to " + uri);
 
+    AtomicBoolean connectionReleased = new AtomicBoolean(false);
+
     HttpClient client = clientFactory.createClient(ClientConfig.defaultConfig().baseUri(uri));
     try {
       WebSocket upstream =
           client.openSocket(
               new HttpRequest(GET, uri.toString()),
-              new ForwardingListener(node, downstream, sessionConsumer, sessionId));
+              new ForwardingListener(
+                  node, downstream, sessionConsumer, sessionId, connectionReleased));
 
       return (msg) -> {
         try {
           upstream.send(msg);
         } finally {
           if (msg instanceof CloseMessage) {
+            if (connectionReleased.compareAndSet(false, true)) {
+              node.releaseConnection(sessionId);
+            }
             try {
               client.close();
             } catch (Exception e) {
@@ -254,6 +264,7 @@ public class ProxyNodeWebsockets
       };
     } catch (Exception e) {
       LOG.log(Level.WARNING, "Connecting to upstream websocket failed", e);
+      node.releaseConnection(sessionId);
       client.close();
       throw e;
     }
@@ -264,16 +275,19 @@ public class ProxyNodeWebsockets
     private final Consumer<Message> downstream;
     private final Consumer<SessionId> sessionConsumer;
     private final SessionId sessionId;
+    private final AtomicBoolean connectionReleased;
 
     public ForwardingListener(
         Node node,
         Consumer<Message> downstream,
         Consumer<SessionId> sessionConsumer,
-        SessionId sessionId) {
+        SessionId sessionId,
+        AtomicBoolean connectionReleased) {
       this.node = node;
       this.downstream = Objects.requireNonNull(downstream);
       this.sessionConsumer = Objects.requireNonNull(sessionConsumer);
       this.sessionId = Objects.requireNonNull(sessionId);
+      this.connectionReleased = Objects.requireNonNull(connectionReleased);
     }
 
     @Override
@@ -285,7 +299,9 @@ public class ProxyNodeWebsockets
     @Override
     public void onClose(int code, String reason) {
       downstream.accept(new CloseMessage(code, reason));
-      node.releaseConnection(sessionId);
+      if (connectionReleased.compareAndSet(false, true)) {
+        node.releaseConnection(sessionId);
+      }
     }
 
     @Override
