@@ -18,25 +18,19 @@
 package org.openqa.selenium.grid.router;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.openqa.selenium.grid.data.Availability.DOWN;
 import static org.openqa.selenium.grid.data.Availability.UP;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.Dialect.W3C;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicReference;
 import org.junit.jupiter.api.BeforeEach;
@@ -86,7 +80,7 @@ class RouterTest {
   private static Map<String, Object> getStatus(Router router) {
     HttpResponse response = router.execute(new HttpRequest(GET, "/status"));
     Map<String, Object> status = Values.get(response, MAP_TYPE);
-    assertNotNull(status);
+    assertThat(status).isNotNull();
     return status;
   }
 
@@ -156,7 +150,7 @@ class RouterTest {
   @Test
   void shouldListAnEmptyDistributorAsMeaningTheGridIsNotReady() {
     Map<String, Object> status = getStatus(router);
-    assertFalse((Boolean) status.get("ready"));
+    assertThat((Boolean) status.get("ready")).isFalse();
   }
 
   @Test
@@ -173,7 +167,7 @@ class RouterTest {
     waitUntilNotReady(router, Duration.ofSeconds(5));
 
     Map<String, Object> status = getStatus(router);
-    assertFalse((Boolean) status.get("ready"), status.toString());
+    assertThat(status.get("ready")).as(() -> status.toString()).isEqualTo(false);
   }
 
   @Test
@@ -229,12 +223,12 @@ class RouterTest {
     @SuppressWarnings("unchecked")
     List<Map<String, Object>> nodes = (List<Map<String, Object>>) status.get("nodes");
 
-    assertEquals(2, nodes.size());
+    assertThat(nodes).hasSize(2);
 
     String firstNodeId = (String) nodes.get(0).get("id");
     String secondNodeId = (String) nodes.get(1).get("id");
 
-    assertNotEquals(firstNodeId, secondNodeId);
+    assertThat(secondNodeId).isNotEqualTo(firstNodeId);
   }
 
   @Test
@@ -266,21 +260,21 @@ class RouterTest {
     waitUntilReady(router, Duration.ofSeconds(5));
 
     Map<String, Object> status = getStatus(router);
-    assertTrue((Boolean) status.get("ready"), status.toString());
+    assertThat((Boolean) status.get("ready")).as(() -> status.toString()).isEqualTo(true);
 
     SessionRequest sessionRequest =
         new SessionRequest(
             new RequestId(UUID.randomUUID()),
             Instant.now(),
-            ImmutableSet.of(W3C),
-            ImmutableSet.of(chromeCapabilities),
-            ImmutableMap.of(),
-            ImmutableMap.of());
+            Set.of(W3C),
+            Set.of(chromeCapabilities),
+            Map.of(),
+            Map.of());
 
     Either<SessionNotCreatedException, CreateSessionResponse> response =
         distributor.newSession(sessionRequest);
 
-    assertTrue(response.isRight());
+    assertThat(response.isRight()).isTrue();
     Session session = response.right().getSession();
     assertThat(session).isNotNull();
 
